Update Style, Update Baidu Statistics

--- a/_posts/notes/acsl/2021-04-13-ACSL-Round4.md
+++ b/_posts/notes/acsl/2021-04-13-ACSL-Round4.md
@@ -66,7 +66,7 @@ $$
 
 $$
 M^2 = \left[\begin{matrix}
-0 & 1 & 0 & 1 & 0\\
+0 & 1 & 0 & 0 & 1\\
 0 & 0 & 0 & 1 & 0\\
 0 & 0 & 0 & 0 & 1\\
 0 & 0 & 0 & 0 & 1\\
@@ -75,6 +75,24 @@ M^2 = \left[\begin{matrix}
 $$
 
 而$M[A][B] = 1$。
+
+<details>
+    <summary>点击查看矩阵乘法快速入门</summary>
+    <p><img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210414163958.png" alt="OIP" style="zoom:80%;" /></p>
+    <p>在这个专题中的邻接矩阵都一定是 $N\times N$ 的方阵，所以不用考虑矩阵乘法的维度问题。</p>
+    <p>
+        如上图，对于一个给定的矩阵 $M$，如果我们想计算它的乘方，一种简便方法是将一个矩阵 $M$ 写在左侧，将相同的矩阵 $M$ 写在上方。这样我们计算 $M^2_{ij}$ 就只用计算 $M$ 的第 $i$ 行与 $M$ 的第 $j$ 列之间的点积结果就行了。
+    </p>
+    <p>
+        $$
+        	M^2_{ij} = M_{i*}\cdot M_{*j}
+        $$
+    </p>
+</details>
+
+
+
+
 
 #### 1.2.3 邻接矩阵计算路径数量的原理
 <details>
