Add Book Sharing Page, Update class main-btn, Update Home Page (not complete)

--- a/_posts/notes/2021-03-04-notes.md
+++ b/_posts/notes/2021-03-04-notes.md
@@ -12,6 +12,7 @@ tags: Page
 <p>这里罗列了我们所有的与CS竞赛有关的算法和数据结构的笔记。我们提供算法解释，伪代码，Java / Python 代码示例与练习题目</p>
 <div style="clear: both"></div>
 <div class="main-button" style="float: right; margin:0px 8px 8px 8px"  onClick="window.location.href='{{ site.baseurl }}/2021/03/04/algorithm-home.html'">打开算法笔记</div>
+<!--<a class="main-btn" style="float:right; margin: 0 2rem 1rem 0;" href="{{ site.baseurl }}/2021/03/04/algorithm-home.html">打开算法笔记</a>-->
 <hr style="clear: both"/>
 
 ### CS188: Artificial Intelligence 笔记
@@ -20,4 +21,16 @@ tags: Page
 <p>这里记录了2019-2020学年的 CS2 课程笔记。这门课参照 UC Berkeley 的 CS188: Artificial Intelligence 的课程大纲与大作业，介绍了许多经典的机器学习方法 - 包括 搜索，强化学习，Q-Learning，贝叶斯网络 和 支持向量机 etc.</p>
 <div style="clear: both"></div>
 <div class="main-button" style="float: right; margin:0px 16px 16px 16px" onClick="window.location.href='{{ site.baseurl }}/2021/02/24/CS188-Home.html'">打开CS188笔记</div>
+<!--<a class="main-btn" style="float:right; margin: 0 2rem 1rem 0;" href="{{ site.baseurl }}/2021/02/24/CS188-Home.html">打开CS188笔记</a>-->
+<hr style="clear: both"/>
+
+### 书目分享
 <div style="clear: both"></div>
+
+<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210415090909.png" alt="image-20210415090909057" style="float: left; height: 40%; width: 40%; margin: 0px 16px 8px 0px; border-radius: 10px" />
+
+<p>这里有 <em>Introduction to Algorithm</em>, <em>Competitive Programming 3</em>, <em>Fluent Python</em>, <em>Artificial Intelligence: a Modern Approach</em>, 和 《神经网络与深度学习》的电子版 pdf。</p>
+<div style="clear: both"/>
+<div class="main-button" style="float: right; margin:0px 16px 16px 16px" onClick="window.location.href='{{ site.baseurl }}/2021/04/15/book-sharing.html'">打开书目分享</div>
+<!--<a class="main-btn" style="float:right; margin: 0 2rem 1rem 0;" href="{{ site.baseurl }}/2021/04/15/book-sharing.html">打开书目分享</a>-->
+<div style="clear: both"/>
