Update Ch 3, Ch 5

--- a/_posts/notes/cs188/2021-02-24-CS188-Home.md
+++ b/_posts/notes/cs188/2021-02-24-CS188-Home.md
@@ -42,7 +42,8 @@ Try connect the internet in a more scientific way to see this playlist.
 
 | 章节                 | 描述                                                         | 链接                                                    |
 | -------------------- | ------------------------------------------------------------ | ------------------------------------------------------- |
-| 1. What is AI        | 这一章从多个角度定义了“人工智能”，以及为了产生人工智能，在各个领域需要解决的问题 | [笔记]({{site.baseurl}}/2021/02/25/CS188-Chapter1.html) |
-| 2. Intelligent Agent | 这一章详细的描述了一个 Agent 的定义以及我们如何判断一个 Agent 的行为是“好”的 | [笔记]({{site.baseurl}}/2021/02/28/CS188-Chapter2.html) |
-| 3. Searching Methods | 这一章描述了几种常用的搜索算法，包括 BFS, DFS, UCS, A* Search 和 Greedy Search | [笔记]({{site.baseurl}}/2021/02/28/CS188-Chapter3.html)  [Project 1](https://cs188.ml/project1/) |
+| 1. What is AI (Ch 1)       | 这一章从多个角度定义了“人工智能”，以及为了产生人工智能，在各个领域需要解决的问题 | [笔记]({{site.baseurl}}/2021/02/25/CS188-Chapter1.html) |
+| 2. Intelligent Agent (Ch 2) | 这一章详细的描述了一个 Agent 的定义以及我们如何判断一个 Agent 的行为是“好”的 | [笔记]({{site.baseurl}}/2021/02/28/CS188-Chapter2.html) |
+| 3. Searching Methods (Ch 3) | 这一章描述了几种常用的搜索算法，包括 BFS, DFS, UCS, A* Search 和 Greedy Search | [笔记]({{site.baseurl}}/2021/02/28/CS188-Chapter3.html)  [Project 1](https://cs188.ml/project1/) |
+| 4. Game Tree (Ch5)| 这一章描述了对抗性搜索（也就是零和博弈） - 在有两个 Agent 参加的零和博弈中如何找到到达目标节点的路径|[笔记]({{site.baseurl}}/2021/04/22/CS188-Chapter5.html)|
 
