Update CS188 Chapter 5 Note, Update MathJax Notes, Update Tagline for pages

--- a/_posts/2021-01-26-All-Posts.md
+++ b/_posts/2021-01-26-All-Posts.md
@@ -3,6 +3,7 @@ layout: page
 title: All Posts
 categories: secondary-pages
 tags: Page
+useTOC: false
 ---
 
 这里记录了该网站所有的页面，并且按照页面的 Tag 进行了分类。用 `ctrl + f` 或者 `command + f` 来直接搜索你想看的页面吧！
@@ -15,7 +16,7 @@ tags: Page
 
 {% assign sorted_tags = site.tags | sort %}
 {% for tag in sorted_tags %}
-  <h3>{{ tag[0] }} ({{tag[1] | size}} Posts)</h3>
+  <h3 id="{{ tag[0] }}">{{ tag[0] }} ({{tag[1] | size}} Posts)</h3>
   <ul>
     {% for post in tag[1] %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
