--- a/_posts/notes/cs188/2021-04-22-CS188-Chapter5.md
+++ b/_posts/notes/cs188/2021-04-22-CS188-Chapter5.md
@@ -46,5 +46,14 @@ In an adversarial search scene, the MAX agent must find a contingent **strategy*
 
 > In the graph above, the maximum utility at node $A$ is 3, since the MAX agent can't change the choice of MIN agent, and in the worst situation (no matter which action MAX agent choose, MIN will always select the successor with min utility for MAX), the maximum utility at $A$ is 3, when MAX takes action $a_1$.
 
-In game theory, we combine a move of MAX and a move of MIN as "one move", and call two half-moves the "ply"
+In game theory, we combine a move of MAX and a move of MIN as "one move", and call two half-moves the "ply".
 
+Given a game tree, the optimal strategy can be determined from the **minimax value** of each node. The minimax value of a node is the utility for MAX at that state assuming that *both players play optimally from there to the end of the game*.
+
+$$
+MINMAX(s) = \begin{cases}
+Utility(s) & \text{if }TERMINAL-TEST(s)\\
+max_{a\in Action(s)}{MINIMAX(RESULT(s, a))} & \text{if }Player(s) = MAX\\
+min_{a\in Action(s)}{MINIMAX(RESULT(s, a))} & \text{if }Player(s) = MIN\\
+\end{cases}
+$$
