Update CS188 Chapter 5 Notes + Schedule

--- a/_posts/notes/cs188/2021-04-22-CS188-Chapter5.md
+++ b/_posts/notes/cs188/2021-04-22-CS188-Chapter5.md
@@ -5,7 +5,7 @@ Author: Mark
 tags: Notes CS188
 ---
 
-### 1. Games
+### 5.1 Games
 
 This chapter describes the **Competitive Environments** for agents, where their goals are conflict. Such problem is called the **adversarial search** problems - often known as **games**.
 
@@ -17,7 +17,7 @@ Games are interesting since they are hard to solve using direct search - the bra
 
 Suppose there are two agents - "MAX" and "MIN". In a game, "MAX" move first and they take turn to move until the game is over. The winner get points and loser get penalty.
 
-#### 1.1 Formally Defined Game
+#### 5.1.1 Formally Defined Game
 
 A game can be formally defined with these elements
 
@@ -38,7 +38,7 @@ In a game tree, we record the utility value of the terminal state from the point
 
 Though a game tree is well-defined and has finite amount of nodes in it, it is better thought to be a theoretical construct we can't realize in physical world as it has too many nodes in it (the Go has $10^40$ nodes, tic-tac-toe has more than $3\times 10^5$ nodes). We usually use term **search tree** to represent a tree that is extracted from the full game tree, and contains enough nodes to allow a player to determine what action to make.
 
-### 2. Optimal Decision in Games
+### 5.2 Optimal Decision in Games
 
 In an adversarial search scene, the MAX agent must find a contingent **strategy**. An optimal strategy leads to outcomes at least as good as other strategy when one is playing an infallible opponent.
 
@@ -57,3 +57,102 @@ max_{a\in Action(s)}{MINIMAX(RESULT(s, a))} & \text{if }Player(s) = MAX\\
 min_{a\in Action(s)}{MINIMAX(RESULT(s, a))} & \text{if }Player(s) = MIN\\
 \end{cases}
 $$
+
+The image above shows the **minimax decision** at the root of game tree: action $a_1$ is the optimal choice for MAX because it leads to the state with the highest minimax value. The minimax decision maximize the *worst-case* outcome for MAX.
+
+Other strategies may do better than the minimax strategy when playing with sub-optimal agent, but in the worst case, they are necessarily worse than the minimax decision.
+
+#### 5.2.1 Minimax Algorithm
+
+The **minimax algorithm** computes the minimax decision from the current state. The recurssion proceeds all the way down to the leaves of the tree, and then back up through the tree as the recurrsion call back.
+
+```python
+def minValue(s) -> int:
+    """
+    return the minimum utility that can achieve from state s assuming MAX agent is playing optimally
+    we assume this is the utility that MIN agent's move will result to
+    """
+    if TERMINAL_TEST(s): return UTILITY(s)
+    minVal = float('inf')
+    for a in ACTION(s):
+        minVal = min(minVal, maxValue(RESULT(s, a)))
+    return minVal
+
+def maxValue(s) -> int:
+    """
+    return the maximum utility that can achieve from state s assuming MIN agent is playing optimally
+    we assume this is the utility that MAX agent's move will result to
+    """
+    if TERMINAL_TEST(s): return UTILITY(s)
+    maxVal = -1 * float('inf')
+    for a in ACTION(s):
+        maxVal = max(maxVal, minValue(RESULT(s, a)))
+    return maxVal
+
+def minimaxDecision(s) -> Action:
+    """
+    Return the action that maximize the minimax value at s
+    """
+    resAction = None
+    maxMinimax = -1 * float('inf')
+    for a in ACTION(s):
+        if minValue(RESULT(s, a)) > maxMinimax:
+            maxMinimax = minValue(RESULT(s, a))
+            resAction = a
+    return resAction
+```
+
+Though the game we discuss is zero-sum game, **alliances** is still a possible choice. Collaboration may emerge from purely selfish behavior.
+
+### 5.3 Alpha-Beta Pruning
+
+When we are using minimax decision algorithm, we have to travel through the game tree using DFS. The node we have to explore will grow exponentially as the depth of game tree grow. Though we can't eliminate the exponential term in time complexity, <mark>we can effectively reduce its size by applying pruning methods</mark>.
+
+Here, we will apply **alpha-beta pruning** on the standard minimax tree. It will return the same move as minimax decision algorithm would and prunes away branches that can't possibly influence the final decision.
+
+![image-20210423095210359](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210423095210.png)
+
+The idea of alpha-beta pruning comes from a very simple observation - in some cases, we don't need to find all successors' utilities to calculate the minimax value at a node. For instance, in the fig above, when we see the maximum minimax value at $C$ is 2, we know its minimax value must be smaller than $B$'s minimax value (which is 3) and we can ignore the other two nodes (dash line) under $C$.
+
+If Player has a better choice than $n$, $n$ will *never be reached in actual play*. Therefore, once we find enough information about $n$ to reach this conclusion, we can prune it.
+
+Below shows a general case for alpha-beta pruning:
+
+![image-20210423101148347](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210423101148.png)
+
+$\alpha=$ the minimax value of the best choice (max-value) we have found so far at any choice point along the path for MAX
+
+$\beta=$ the minimax value of the best choice (min-value) we have found so far at any choice point along the path for MIN
+
+Alpha-beta pruning update the $\alpha$ and $\beta$ as it goes along and prunes the remaining branches at a node as soon as the value of the current node is known to be worse than the current $\alpha$ or $\beta$ for MAX and MIN respectively.
+
+```python
+def maxValue(s, alpha, beta) -> int:
+    """
+    returns an integer represent the minimax value at current state (or the last value before the node is pruned)
+    """
+    if TERMINAL_TEST(s): return UTILITY(s)
+    minimaxVal = -1 * float("inf")
+    for a in ACTION(s):
+        minimaxVal = max(minimaxVal, minValue(RESULT(s, a), alpha, beta))
+        if minimaxVal >= beta:      # Since the MIN agent is optimal, this scnerio will never occur
+            return minimaxVal       # the following expansion is pruned
+    return minimaxVal
+
+def minValue(s, alpha, beta) -> int:
+    """
+    returns an integer represent the min minimax value at current state (or the last value before the node is pruned)
+    """
+    if TERMINAL_TEST(s): return UTILITY(s)
+    minimaxVal = float("inf")
+    for a in ACTION(s):
+        minimaxVal = min(minimaxVal, maxValue(RESULT(s, a), alpha, beta))
+        if minimaxVal <= alpha:     # Since the MAX agent is optimal, the MAX agent will never reach this node (as there exist better path)
+            return minimaxValue     # the following expansion is pruned
+    return minimaxValue
+```
+
+To start searching from the root, use `maxValue(root, -1 * float("inf"), float("inf"))`
+
+### 5.4 Backtracking
+
