Update Home Page, Update Main-content

--- a/_posts/notes/acsl/2021-04-13-ACSL-Round4.md
+++ b/_posts/notes/acsl/2021-04-13-ACSL-Round4.md
@@ -364,11 +364,9 @@ How many ordered-4-tuples (A, B, C, D) make the following circuit TRUE?
 
 ## 4. 讲义下载
 
-<a href="https://pan.baidu.com/s/1uhB0fitcVFwAvU_XTjjjWg">
-<button class="main-button">
+<button class="main-button" onClick="window.location.href='https://pan.baidu.com/s/1uhB0fitcVFwAvU_XTjjjWg'">
 点我下载 ACSL4.zip，提取码 gwcs
 </button>
-</a>
 
 ---
 这个版本的 ACSL 讲义由 Rita Tan, 马润铎 的历史版本改编而来
