Update Page Header

--- a/_posts/2021-01-26-About-Us.md
+++ b/_posts/2021-01-26-About-Us.md
@@ -27,7 +27,7 @@ tags: Page
 
 ---
 
-特别感谢 肖杰中，是清子，吴小满，林卓衡 在该网站初步构建和筛选USACO打卡时提供的帮助。
+特别感谢 肖杰中，是清子，吴小满，林卓衡 在该网站初步构建和筛选USACO打卡时提供的帮助， 李云天 在美工方面的工作。
 
 感谢 2017 - 2019 届的学长与学姐。本网站许多备赛材料来源于在学长学姐总结的资料基础上进行汇总，改编，修正。 
 
