--- a/_posts/misc/2021-01-26-About-Us.md
+++ b/_posts/misc/2021-01-26-About-Us.md
@@ -3,6 +3,7 @@ layout: page
 title: About Us
 categories: secondary-pages
 tags: Page Miscellaneous
+useTOC: false
 ---
 
 <div style="clear:right"></div>
