Finish CS188 Chapter 5 Note, Add Chapter 6 Page

--- a/_posts/notes/cs188/2021-04-22-CS188-Chapter5.md
+++ b/_posts/notes/cs188/2021-04-22-CS188-Chapter5.md
@@ -156,3 +156,35 @@ To start searching from the root, use `maxValue(root, -1 * float("inf"), float("
 
 ### 5.4 Backtracking
 
+Backtracking is a way to prune the search space. When we are searching through a search space, sometimes we can make sure the current solution is impossible when we haven't reach the end of action sequence.
+
+Suppose a game need 4 actions to make up an action sequence, we can sometimes know we will lose when playing only 2 actions yet. In this case, we can stop searching and **go back to previous step** and choose another action to play. (this is the reason why it is called *Backtracking*)
+
+![image-20210511000544052](https://markdown-img-1304853431.cos.ap-guangzhou.myqcloud.com/20210511000544.png)
+
+The effect of backtracking will be more significant if we can identify whether it is possible or not to get to goal node from a shallower node. In such situation, much of the search space will be pruned.
+
+A famous problem that can be solved by Backtracking is the "eight queens" problem. Detailed description of a more general case (n-queen problem) is in this link: [UVA-11195 Another n-Queen Problem](https://vjudge.net/problem/UVA-11195).
+
+```python
+def nQueen(state, currCol):
+    if currCol == len(state): return 1
+
+    resultState = 0
+    for candidate in range(len(state)):
+        if isValidState(state, candidate, currCol):
+            newState = state[:]
+            newState[currCol] = candidate
+            resultState += nQueen(newState, currCol + 1)
+    return resultState
+
+def isValidState(state, candidate, currColumn):
+    if candidate in state: return False     # are queens on the same row
+    for i, position in enumerate(state):
+        if i >= currColumn: break
+        if abs(position - candidate) == (currColumn - i):
+            return False                    # are queens on the same diagonal
+    return True
+```
+
+
