全部usaco-analysis的yml变更，usaco.md页面和代码变更，优化leetcode-analysis

--- a/_posts/usaco-analysis/2020-11-16-USACO-Gold-2017-Jan-2.md
+++ b/_posts/usaco-analysis/2020-11-16-USACO-Gold-2017-Jan-2.md
@@ -4,9 +4,10 @@ title: USACO 2017 Jan Gold P2
 tags: USACO-analysis
 status: OK
 Author: Mark
-time: 2017
+year: 2017
 group: Gold
-question: Jan 2
+season: Jan
+question: 2
 ---
 
 ## Problem 2. Hoof, Paper, Scissors
@@ -44,4 +45,5 @@ After calculating through all the table, we should check all the elements in sli
 ### Time Complexity Analysis
 
 Since we know that $1\leq N\leq 100,000$ and $1\leq k\leq 20$, the 3D array we will construct has a size of $3\times100,000\times20 = 6\times 10^7$. Since we need to calculate through the whole table, our program may require $1\times 10^8$ computational steps and time complexity of $O(kN)$. Since this time complexity is on the edge of TLE, we should use Java to solve this problem.
+
 
