--- a/_posts/usaco-analysis/2020-11-17-USACO-Gold-2019-Open-2.md
+++ b/_posts/usaco-analysis/2020-11-17-USACO-Gold-2019-Open-2.md
@@ -4,9 +4,10 @@ title: USACO 2020 Open Gold P2
 tags: USACO-analysis
 status: OK
 Author: 肖肖
-time: 2019
+year: 2019
 group: Gold
-question: Open 2
+season: Open
+question: 2
 ---
 
 ### 题目
@@ -50,4 +51,5 @@ int main(){
 }
 
 ```
+
 
