--- a/_posts/usaco-analysis/2020-12-01-USACO-Gold-2018-Open-1.md
+++ b/_posts/usaco-analysis/2020-12-01-USACO-Gold-2018-Open-1.md
@@ -4,9 +4,10 @@ title: USACO 2018 Open Gold P1
 tags: USACO-analysis
 status: OK
 Author: 肖肖
-time: 2018
+year: 2018
 group: Gold
-question: Open 1
+season: Open
+question: 1
 ---
 
 
@@ -64,4 +65,5 @@ int main(){
 	return 0;
 }
 ```
+
 
