--- a/_posts/usaco-analysis/2021-01-26-USACO.md
+++ b/_posts/usaco-analysis/2021-01-26-USACO.md
@@ -14,111 +14,34 @@ useTOC: false
 这里记载了 2020年下半年以来 我们搜集到的算法队成员日常打卡，如果你发现 USACO 官方solution因为语言不同而晦涩难懂，可以在这里寻找解法。
 
 点击名称查看对应题目解析
-
+  
 ---
+{%assign years = "2021,2020,2019,2018,2017,2016" | split:","%} {%comment%} add the new years here {%endcomment%}
+{%for eachYear in years%}
+<h3><strong>{{eachYear}}</strong></h3>
 
-### **2021**
-{% assign list = site.tags["USACO-analysis"] | where: 'time', 2021%}
-{% assign dates = "Jan, Feb, Open" | split: ", " %}
-
-{% for date in dates %}
-  <h4>{{date}}</h4>
+{% assign seasons = "Jan, Feb, Open, Dec" | split: ", " %}
+{% comment %}未完成：按组别排序{% endcomment %}
+{% for eachSeason in seasons %}
+  <h4>{{eachSeason}}</h4>
   <div class="card-box">
+  {% assign list = site.tags["USACO-analysis"] | where: 'year', eachYear | where: 'season', eachSeason%}
+  {%if list==empty%}
+    <h5><font color="LightSteelBlue">We are waiting for your analysis for this season!</font></h5>
+  {%else%}
+  {%assign questions = "1,2,3" | split:","%}
+  {%for eachQuestion in questions%}
     {% for post in list %}
-      {% if post.question contains date %}
+      {%assign Q = eachQuestion | abs%}
+      {%if post.question == Q%}
         <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
-          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
+          <p><strong>{{ post.group }} {{ Q }}</strong><br/>by {{post.Author}}</p>
         </div>
-      {% endif %}
-    {% endfor %}
+      {%endif%}
+    {%endfor%}
+  {% endfor %}
+  {%endif%}
   </div>
 {% endfor %}
 
-### **2020**
-{% assign list = site.tags["USACO-analysis"] | where: 'time', 2020%}
-{% assign dates = "Jan, Feb, Open, Dec" | split: ", " %}
-
-{% for date in dates %}
-  <h4>{{date}}</h4>
-  <div class="card-box">
-    {% for post in list %}
-      {% if post.question contains date %}
-        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
-          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
-        </div>
-      {% endif %}
-    {% endfor %}
-  </div>
-{% endfor %}
-
-### **2019**
-{% assign list = site.tags["USACO-analysis"] | where: 'time', 2019%}
-{% assign dates = "Jan, Feb, Open, Dec" | split: ", " %}
-
-{% for date in dates %}
-  <h4>{{date}}</h4>
-  <div class="card-box">
-    {% for post in list %}
-      {% assign post_data = post.question | split: " " %}
-      {% if post_data[0] == date %}
-        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
-          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
-        </div>
-      {% endif %}
-    {% endfor %}
-  </div>
-{% endfor %}
-
-### **2018**
-{% assign list = site.tags["USACO-analysis"] | where: 'time', 2018%}
-{% assign dates = "Jan, Feb, Open, Dec" | split: ", " %}
-
-{% for date in dates %}
-  <h4>{{date}}</h4>
-  <div class="card-box">
-    {% for post in list %}
-      {% assign post_data = post.question | split: " " %}
-      {% if post_data[0] == date %}
-        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
-          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
-        </div>
-      {% endif %}
-    {% endfor %}
-  </div>
-{% endfor %}
-
-### **2017**
-{% assign list = site.tags["USACO-analysis"] | where: 'time', 2017%}
-{% assign dates = "Jan, Feb, Open, Dec" | split: ", " %}
-
-{% for date in dates %}
-  <h4>{{date}}</h4>
-  <div class="card-box">
-    {% for post in list %}
-      {% assign post_data = post.question | split: " " %}
-      {% if post_data[0] == date %}
-        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
-          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
-        </div>
-      {% endif %}
-    {% endfor %}
-  </div>
-{% endfor %}
-
-### **2016**
-{% assign list = site.tags["USACO-analysis"] | where: 'time', 2016%}
-{% assign dates = "Jan, Feb, Open, Dec" | split: ", " %}
-
-{% for date in dates %}
-  <h4>{{date}}</h4>
-  <div class="card-box">
-    {% for post in list %}
-      {% assign post_data = post.question | split: " " %}
-      {% if post_data[0] == date %}
-        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
-          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
-        </div>
-      {% endif %}
-    {% endfor %}
-  </div>
-{% endfor %}
+{%endfor%}
