--- a/_posts/usaco-analysis/2021-04-14-USACO-Gold-2019-Dec-1.md
+++ b/_posts/usaco-analysis/2021-04-14-USACO-Gold-2019-Dec-1.md
@@ -4,9 +4,10 @@ title: USACO 2019 Dec Gold P1
 tags: USACO-analysis
 status: OK
 Author: 李若谷
-time: 2019
+year: 2019
 group: Gold
-question: Dec 1
+season: Dec
+question: 1
 ---
 
 ### USACO 2019 December Gold P1
@@ -106,3 +107,4 @@ int main()
 ### 时间复杂度
 
 $O(\max( f_i)*m*\log m)$
+
