--- a/_posts/usaco-analysis/2020-11-14-USACO-Gold-2017-Jan-1.md
+++ b/_posts/usaco-analysis/2020-11-14-USACO-Gold-2017-Jan-1.md
@@ -4,9 +4,10 @@ title: USACO 2017 Jan Gold P1
 tags: USACO-analysis
 status: OK
 Author: Mark
-time: 2017
+year: 2017
 group: Gold
-question: Jan 1
+season: Jan
+question: 1
 ---
 ## Problem 1 Balanced Photo
 
