--- a/_posts/usaco-analysis/2020-11-25-USACO-Gold-2017-Jan-3.md
+++ b/_posts/usaco-analysis/2020-11-25-USACO-Gold-2017-Jan-3.md
@@ -4,9 +4,10 @@ title: USACO 2017 Jan Gold P3
 tags: USACO-analysis
 status: OK
 Author: Mark
-time: 2017
+year: 2017
 group: Gold
-question: Jan 3
+season: Jan
+question: 3
 ---
 
 ## Problem 3. Cow Navigation
