--- a/_posts/usaco-analysis/2020-11-26-USACO-Gold-2019-Jan-2.md
+++ b/_posts/usaco-analysis/2020-11-26-USACO-Gold-2019-Jan-2.md
@@ -4,9 +4,10 @@ title: USACO 2019 Jan Gold P2
 tags: USACO-analysis
 status: OK
 Author: 肖肖
-time: 2019
+year: 2019
 group: Gold
-question: Jan 2
+season: Jan
+question: 2
 ---
 <div class="notification">
     <h3>⚠ 该解析描述需要进一步细化和具体实现</h3>
