--- a/_posts/usaco-analysis/2020-11-27-USACO-Gold-2017-Feb-1.md
+++ b/_posts/usaco-analysis/2020-11-27-USACO-Gold-2017-Feb-1.md
@@ -4,9 +4,10 @@ title: USACO 2017 Feb Gold P1
 tags: USACO-analysis
 status: OK
 Author: Mark
-time: 2017
+year: 2017
 group: Gold
-question: Feb 1
+season: Feb
+question: 1
 ---
 
 ## Problem 1. Why did the Cow Cross the Road
