--- a/_posts/usaco-analysis/2020-12-10-USACO-Gold-2017-Dec-1.md
+++ b/_posts/usaco-analysis/2020-12-10-USACO-Gold-2017-Dec-1.md
@@ -4,9 +4,10 @@ title: USACO 2017 Dec Gold P1
 tags: USACO-analysis
 status: OK
 Author: Mark
-time: 2017
+year: 2017
 group: Gold
-question: Dec 1
+season: Dec
+question: 1
 ---
 
 ## Problem 1. A Pie For A Pie
