--- a/_posts/usaco-analysis/2020-12-11-USACO-Gold-2017-Feb-3.md
+++ b/_posts/usaco-analysis/2020-12-11-USACO-Gold-2017-Feb-3.md
@@ -4,9 +4,10 @@ title: USACO 2017 Feb Gold P3
 tags: USACO-analysis
 status: OK
 Author: Mark
-time: 2017
+year: 2017
 group: Gold
-question: Feb 3
+season: Feb
+question: 3
 ---
 
 ## Problem 3. Why Did the Cow Cross the Road III
