--- a/_posts/usaco-analysis/2020-12-15-USACO-Gold-2017-Dec-2.md
+++ b/_posts/usaco-analysis/2020-12-15-USACO-Gold-2017-Dec-2.md
@@ -4,9 +4,10 @@ title: USACO 2017 Dec Gold P2
 tags: USACO-analysis
 status: OK
 Author: Mark
-time: 2017
+year: 2017
 group: Gold
-question: Dec 2
+season: Dec
+question: 2
 ---
 ## Problem 2. Barn Painting
 
