--- a/_posts/usaco-analysis/2021-01-07-USACO-Gold-2020-Open-1.md
+++ b/_posts/usaco-analysis/2021-01-07-USACO-Gold-2020-Open-1.md
@@ -4,9 +4,10 @@ title: USACO 2020 Open Gold P1
 tags: USACO-analysis
 status: OK
 Author: lrg
-time: 2020
+year: 2020
 group: Gold
-question: Open 1
+season: Open
+question: 1
 ---
 ### 题目大意：
 
