--- a/_posts/usaco-analysis/2021-04-14-USACO-Gold-2020-Jan-1.md
+++ b/_posts/usaco-analysis/2021-04-14-USACO-Gold-2020-Jan-1.md
@@ -4,9 +4,10 @@ title: USACO 2020 Jan Gold P1
 tags: USACO-analysis
 status: OK
 Author: 李若谷
-time: 2020
+year: 2020
 group: Gold
-question: Jan 1
+season: Jan
+question: 1
 ---
 
 ### 题目大意
