Flex-display Tagline, Update Documentation, New href type 'tag', fix tags 'Algorithms' > 'Algorithm', tags 'other-analysis' > 'Other-analysis'

--- a/_posts/2021-01-26-All-Posts.md
+++ b/_posts/2021-01-26-All-Posts.md
@@ -15,12 +15,16 @@ useTOC: false
 ---
 
 {% assign sorted_tags = site.tags | sort %}
+<div>
 {% for tag in sorted_tags %}
-  <h3 id="{{ tag[0] }}">{{ tag[0] }} ({{tag[1] | size}} Posts)</h3>
-  <ul>
-    {% for post in tag[1] %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+  <div>
+    <h3 id="{{ tag[0] }}">{{ tag[0] }} ({{tag[1] | size}} Posts)</h3>
+    <ul>
+      {% for post in tag[1] %}
+        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+      {% endfor %}
+    </ul>
+  </div>
 {% endfor %}
+</div>
 
