Update #report-problem Style, Render USACO Card using _includes/fn/usaco_analysis_card.html, Major update on USACO Analysis Page, new 2D Prefix Sum Page

--- a/_posts/usaco-analysis/2020-11-26-USACO-Gold-2019-Jan-2.md
+++ b/_posts/usaco-analysis/2020-11-26-USACO-Gold-2019-Jan-2.md
@@ -11,7 +11,7 @@ question: 2
 ---
 <div class="notification">
     <h3>⚠ 该解析描述需要进一步细化和具体实现</h3>
-    我们认为这条解析不够完善，如果你有更好的解析/更加详细的思路欢迎用微信发给mark或者以"USACO Solution"为主题发送到 286988023@qq.com
+    我们认为这条解析不够完善，如果你有更好的解析/更加详细的思路欢迎用微信发给mark或者以"USACO Solution"为主题发送到 {{ site.email }}
 </div>
 
 ### 题目
