--- a/_posts/usaco-analysis/2021-01-26-USACO.md
+++ b/_posts/usaco-analysis/2021-01-26-USACO.md
@@ -6,42 +6,64 @@ tags: Page
 useTOC: false
 ---
 
+<script src="{{ site.baseurl }}/js/usaco-search.js"></script>
 <div class="info">
   <h3>✅ 我们欢迎你的解析！</h3>
-  目前我们还有一些题目没有给出 Solution，如果你希望把自己的解法放到网页上或者现在的solution存在问题/更优解法，可以联系我们或者以 "USACO Solution" 为主题发送邮件到 286988023@qq.com。<strong>我们欢迎所有人的 Solution ！</strong>
+  目前我们还有一些题目没有给出 Solution，如果你希望把自己的解法放到网页上或者现在的solution存在问题/更优解法，可以联系我们或者以 "USACO Solution" 为主题发送邮件到 {{ site.email }}。<strong>我们欢迎所有人的 Solution ！</strong>
 </div>
 
 这里记载了 2020年下半年以来 我们搜集到的算法队成员日常打卡，如果你发现 USACO 官方solution因为语言不同而晦涩难懂，可以在这里寻找解法。
 
-点击名称查看对应题目解析
-  
 ---
-{%assign years = "2021,2020,2019,2018,2017,2016" | split:","%} {%comment%} add the new years here {%endcomment%}
-{%for eachYear in years%}
-<h3><strong>{{eachYear}}</strong></h3>
+<!-- Add new years HERE BELOW -->
+{% assign years = "2021,2020,2019,2018,2017,2016" | split:"," %}
+### 筛选器
 
-{% assign seasons = "Jan, Feb, Open, Dec" | split: ", " %}
-{% comment %}未完成：按组别排序{% endcomment %}
-{% for eachSeason in seasons %}
-  <h4>{{eachSeason}}</h4>
-  <div class="card-box">
-  {% assign list = site.tags["USACO-analysis"] | where: 'year', eachYear | where: 'season', eachSeason%}
-  {%if list==empty%}
-    <h5><font color="LightSteelBlue">We are waiting for your analysis for this season!</font></h5>
-  {%else%}
-  {%assign questions = "1,2,3" | split:","%}
-  {%for eachQuestion in questions%}
-    {% for post in list %}
-      {%assign Q = eachQuestion | abs%}
-      {%if post.question == Q%}
-        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
-          <p><strong>{{ post.group }} {{ Q }}</strong><br/>by {{post.Author}}</p>
-        </div>
-      {%endif%}
-    {%endfor%}
+#### Year
+
+<div class="button-box">
+  {% for eachYear in years%}
+    <button class="main-button" onClick="usaco_selector({{eachYear}});"> {{eachYear}} </button>
   {% endfor %}
-  {%endif%}
-  </div>
-{% endfor %}
+  <button class="main-button" onClick="usaco_selector('all');"> All </button>
+</div>
 
-{%endfor%}
+---
+
+#### Group
+<div class="button-box">
+  <button class="main-button" onClick="usaco_group_selector('Bronze');"> Bronze </button>
+  <button class="main-button" onClick="usaco_group_selector('Silver');"> Silver </button>
+  <button class="main-button" onClick="usaco_group_selector('Gold');"> Gold </button>
+  <button class="main-button" onClick="usaco_group_selector('all');"> All </button>
+</div>
+
+---
+<!-- Below are the Auto-generation Code for All USACO Posts-->
+{%for eachYear in years%}
+<div class="jsBox" id="box{{eachYear}}">
+  <h3><strong>{{eachYear}}</strong></h3>
+  {% assign seasons = "Jan, Feb, Open, Dec" | split: ", " %}
+  {% comment %}未完成：按组别排序{% endcomment %}
+  {% for eachSeason in seasons %}
+    <h4>{{eachSeason}}</h4>
+    {% assign list = site.tags["USACO-analysis"] | where: 'year', eachYear | where: 'season', eachSeason%}
+    {%if list==empty%}
+      <center><h4><font color="LightSteelBlue">We are waiting for your analysis for this season!</font></h4></center>
+    {%else%}
+      <div class="horizontal-flex-box">
+        {%assign questions = "1,2,3" | split:","%}
+        {%for eachQuestion in questions%}
+          {% for post in list %}
+            {%assign Q = eachQuestion | abs%}
+            {%if post.question == Q%}
+              {% include fn/usaco_analysis_card.html page=post %}
+            {%endif%}
+          {%endfor%}
+        {% endfor %}
+      </div>
+      {%endif%}
+  {% endfor %}
+</div>
+
+{% endfor %}
