--- a/_posts/usaco-analysis/2021-01-26-USACO.md
+++ b/_posts/usaco-analysis/2021-01-26-USACO.md
@@ -17,6 +17,7 @@ useTOC: false
 ---
 <!-- Add new years HERE BELOW -->
 {% assign years = "2021,2020,2019,2018,2017,2016" | split:"," %}
+{%assign groups = "Bronze,Silver,Gold" | split:","%}
 ### 筛选器
 
 #### Year
@@ -32,9 +33,9 @@ useTOC: false
 
 #### Group
 <div class="button-box">
-  <button class="main-button" onClick="usaco_group_selector('Bronze');"> Bronze </button>
-  <button class="main-button" onClick="usaco_group_selector('Silver');"> Silver </button>
-  <button class="main-button" onClick="usaco_group_selector('Gold');"> Gold </button>
+  {% for eachGroup in groups%}
+    <button class="main-button" onClick="usaco_group_selector({{eachGroup}});"> {{eachGroup}} </button>
+  {%endfor%}
   <button class="main-button" onClick="usaco_group_selector('all');"> All </button>
 </div>
 
@@ -44,7 +45,6 @@ useTOC: false
 <div class="jsBox" id="box{{eachYear}}">
   <h3><strong>{{eachYear}}</strong></h3>
   {% assign seasons = "Jan, Feb, Open, Dec" | split: ", " %}
-  {% comment %}未完成：按组别排序{% endcomment %}
   {% for eachSeason in seasons %}
     <h4>{{eachSeason}}</h4>
     {% assign list = site.tags["USACO-analysis"] | where: 'year', eachYear | where: 'season', eachSeason%}
@@ -53,16 +53,18 @@ useTOC: false
     {%else%}
       <div class="horizontal-flex-box">
         {%assign questions = "1,2,3" | split:","%}
-        {%for eachQuestion in questions%}
-          {% for post in list %}
-            {%assign Q = eachQuestion | abs%}
-            {%if post.question == Q%}
-              {% include fn/usaco_analysis_card.html page=post %}
-            {%endif%}
-          {%endfor%}
-        {% endfor %}
+        {%for eachGroup in groups%}
+          {%for eachQuestion in questions%}
+            {% for post in list %}
+              {%assign Q = eachQuestion | abs%}
+              {%if post.question == Q and post.group==eachGroup%}
+                {% include fn/usaco_analysis_card.html page=post %}
+              {%endif%}
+            {%endfor%}
+          {% endfor %}
+        {%endfor%}
       </div>
-      {%endif%}
+    {%endif%}
   {% endfor %}
 </div>
 
